--- a/src/main/resources/assets/livelyrealms/lang/en_us.json
+++ b/src/main/resources/assets/livelyrealms/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "itemGroup.examplemod": "Example Mod Tab",
   "block.examplemod.example_block": "Example Block",
-  "item.examplemod.example_item": "Example Item"
+  "item.examplemod.example_item": "Example Item",
+  "item.livelyrealms.grammar_wand": "Grammar Wand"
 }
