feat: Instant build wand

--- a/src/main/resources/assets/livelyrealms/lang/en_us.json
+++ b/src/main/resources/assets/livelyrealms/lang/en_us.json
@@ -2,5 +2,6 @@
   "itemGroup.examplemod": "Example Mod Tab",
   "block.examplemod.example_block": "Example Block",
   "item.examplemod.example_item": "Example Item",
-  "item.livelyrealms.grammar_wand": "Grammar Wand"
+  "item.livelyrealms.grammar_wand": "Grammar Wand",
+  "item.livelyrealms.instant_build_wand": "Instant Build Wand"
 }
